Fix contact box and collapse menu after selection

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -6,10 +6,11 @@
 }
 body {
   padding: 0;  /*background-image: url("/images/Hestia.jpg");
-              background-color: rgb(235, 235, 235);
-              background-size: cover;
-              background-position: 44.1379% 0%;*/
+                background-color: rgb(235, 235, 235);
+                background-size: cover;
+                background-position: 44.1379% 0%;*/
   background-image: url("/images/Hestia_dark.jpg");
+  background-color: black;
   background-position: top center;
   background-size: cover;
   background-attachment: fixed;
@@ -19,7 +20,7 @@ body {
   width: 100%;
   min-height: 100%;
   z-index: 1;
-  font-family: Didot;
+  font-family: Didot !important;
 }
 h1, h2, h3, h4 {
   color: white;
@@ -172,6 +173,24 @@ div#js-navbar-collapse {
   .col-md-12.news {
     width: 50%;
   }
+}
+span {
+  font-family: Didot !important;
+  color: white !important;
+}
+label {
+  color: white;
+}
+a {
+  color: #E49959;
+  -webkit-transition: all 0.3s linear;
+  transition: all 0.3s linear;
+}
+a:hover {
+  color: #FFB06C;
+  text-decoration: none;
+  -webkit-transition: all 0.3s linear;
+  transition: all 0.3s linear;
 }
 
 /* Responsive: Portrait tablets and up */
